# ezthrottle-python

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: integration-tests.yml
examples/: basic_usage.py  test_integration.py  test_with_sdk.py
ezthrottle/: __init__.py  client.py  event_store.py  exceptions.py  init.py  step.py  webhook.py  webhook_utils.py
test-app/: .dockerignore  .gitignore  Dockerfile  Makefile  app.py  fly.toml
test-app/tests/: 01_performance_basic.hurl  02_performance_racing.hurl  03_fallback_chain.hurl  04_on_success.hurl  05_idempotent_hash.hurl  06_idempotent_unique.hurl  07_decorator_auto_forward.hurl
